[package]
name = "prost-msg-id"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/luyikk/prost-build-type"
documentation = "https://docs.rs/prost-msg-id"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
